# obsidian

./: .gitignore  CMakeLists.txt  Program.cs  README.md  build-release.bat  class.template  enum.template  obsidian.csproj  obsidian.sln  reflection-header.template
.github/workflows/: build-and-test.yml
obsidian/: cache.cpp  cache.hpp  generator.cpp  generator.hpp  obsidian-main.cpp  templates.hpp  types.hpp
templates/: class-collection.template  class.template  enum-collection.template
test-cpp/: CMakeLists.txt  compiler-warnings.cmake  run-install-test.cmake  run-obsidian-test.cmake
test-cpp/include/: test-types.hpp  types.hpp
test-cpp/include-error/: error-types.hpp  missing-include.hpp  syntax-error.hpp
test-cpp/src/: main-test.cpp  main.cpp  secondary-test.cpp  secondary.cpp
